[tool.poetry]
name = "belvo-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.115.7" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
