[project]
name = "belvo-client"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.7,<0.116",
  "pyjwt>=2.10.1,<3",
  "passlib[bcrypt]>=1.7.4,<2",
  "pydantic-settings>=2.7.1,<3",
  "sqlmodel>=0.0.22,<0.0.23",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "ruff>=0.13.0",
]
